--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "carbon-components": "^10.17.0",
     "carbon-components-react": "^7.17.0",
     "carbon-icons": "^7.0.7",
+    "node-sass": "^4.14.1",
+    "peerjs": "^1.3.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
