--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "peerjs": "^1.3.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-player": "^2.7.0",
     "react-scripts": "4.0.1",
     "typescript": "^4.1.2",
     "video.js": "^7.10.2",
