--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-player": "^2.7.0",
     "react-scripts": "4.0.1",
     "typescript": "^4.1.2",
+    "uuid": "^8.3.2",
     "video.js": "^7.10.2",
     "web-vitals": "^0.2.4"
   },
@@ -50,6 +51,7 @@
     ]
   },
   "devDependencies": {
+    "@types/uuid": "^8.3.0",
     "@types/video.js": "^7.3.11"
   }
 }
